#21: ctor initialization of printer-attributes